[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://CustomButton.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.756863, 0.501961, 0.227451, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.556863, 0.356863, 0.141176, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.843137, 0.537255, 0.203922, 1 )

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0.239216, 0.627451, 0.384314, 1 )
Button/colors/font_color_disabled = Color( 0.12549, 0.521569, 0.329412, 0.2 )
Button/colors/font_color_focus = Color( 0.203922, 0.552941, 0.513726, 1 )
Button/colors/font_color_hover = Color( 0.0941176, 0.819608, 0.341176, 1 )
Button/colors/font_color_pressed = Color( 0.0941176, 0.819608, 0.341176, 1 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 128
font_data = ExtResource( 2 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 762.0
color = Color( 0.141176, 0.776471, 0.760784, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_top = 796.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.301961, 0.243137, 0.0627451, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_top = 762.0
margin_right = 1920.0
margin_bottom = 796.0
color = Color( 0.0901961, 0.584314, 0.145098, 1 )

[node name="StartButton" parent="." instance=ExtResource( 3 )]
margin_left = 712.0
margin_top = 224.0
margin_right = 1212.0
margin_bottom = 324.0
text = "Start"

[node name="RulesButton" parent="." instance=ExtResource( 3 )]
margin_left = 712.0
margin_top = 416.0
margin_right = 1212.0
margin_bottom = 516.0
text = "Rules"

[node name="CreditsButton" parent="." instance=ExtResource( 3 )]
margin_left = 712.0
margin_top = 600.0
margin_right = 1212.0
margin_bottom = 700.0
text = "Credits"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -437.0
margin_right = 437.0
margin_bottom = 155.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 6 )
text = "Musical Root"

[node name="ExitButton" parent="." instance=ExtResource( 3 )]
margin_left = 712.0
margin_top = 872.0
margin_right = 1212.0
margin_bottom = 972.0
text = "Exit"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="RulesButton" to="." method="_on_RulesButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_CustomButton_pressed"]
